<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:foreground="@drawable/foreground"
        android:scaleType="centerCrop"
        android:src="@drawable/img_login" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/text_title_firstActivity"
        android:textColor="@color/color_textLogin"
        android:textSize="@dimen/text_xlarge"
        app:layout_constraintBottom_toTopOf="@id/ed_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ed_email"
        style="@style/style_ed_shapeBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_mail"
        android:drawablePadding="@dimen/small"
        android:hint="@string/text_email"
        app:layout_constraintBottom_toTopOf="@id/btm_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/ed_password"
        style="@style/style_ed_shapeBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/average"
        android:drawableStart="@drawable/ic_lock_outline_black_24dp"
        android:drawablePadding="@dimen/small"
        android:hint="@string/text_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ed_email" />

    <TextView
        style="@style/style_Text_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/average"
        android:text="@string/text_ForgotPassword"
        app:layout_constraintEnd_toEndOf="@id/ed_password"
        app:layout_constraintTop_toBottomOf="@id/ed_password" />

    <Button
        android:id="@+id/btm_login"
        style="@style/button_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_button"
        android:backgroundTint="#5663FF"
        android:text="@string/text_login"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85" />

    <TextView
        style="@style/style_Text_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/Xlarge"
        android:text="@string/text_newAccount"
        android:textColor="@color/color_textLogin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>