<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:foreground="@drawable/foreground"
        android:scaleType="centerCrop"
        android:src="@drawable/img_welcome_activity" />

    <Button
        style="@style/style_Text_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/Xlarge"
        android:layout_marginEnd="@dimen/average"
        android:background="@drawable/shape_button"
        android:backgroundTint="#60ffffff"
        android:text="@string/text_skip"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/large"
        android:fontFamily="@font/roboto_regular"
        android:lineSpacingExtra="@dimen/xsmall"
        android:text="@string/text_welcome"
        android:textColor="@color/color_textLogin"
        android:textSize="@dimen/Xlarge"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4" />

    <TextView
        android:id="@+id/tv_foodybite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/large"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/text_title_firstActivity"
        android:textColor="@color/color_foodybite_welcome"
        android:textSize="@dimen/Xlarge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_welcome" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_foodybite"
        android:layout_marginTop="@dimen/Xlarge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/text_suggestion"
        style="@style/style_Text_login"
        android:textSize="@dimen/text_medium"
        android:lineSpacingExtra="@dimen/xsmall"
        />

    <Button
        android:id="@+id/btm_login"
        style="@style/button_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_button"
        android:backgroundTint="#5663FF"
        android:text="@string/text_GPS"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/Xlarge"
       />
</androidx.constraintlayout.widget.ConstraintLayout>