<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:foreground="@drawable/foreground"
        android:scaleType="centerCrop"
        android:src="@drawable/img_create_account" />
    <ImageButton
        android:id="@+id/btn_profile"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:src="@drawable/ic_person_profile"
        android:background="@drawable/shape_profile"
        android:backgroundTint="#60ffffff"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/large"/>
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:src="@drawable/ic_set_profile"
        android:background="@drawable/shape_set_profile"
        android:padding="@dimen/xsmall"
   app:layout_constraintBottom_toBottomOf="@id/btn_profile"
        app:layout_constraintEnd_toEndOf="@id/btn_profile"
    />
    <EditText
        android:id="@+id/ed_name"
        style="@style/style_ed_shapeBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_person_account"
        android:drawablePadding="@dimen/small"
        android:hint="@string/text_nameAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_profile"
        android:layout_marginTop="@dimen/XXlarge"
     />
    <EditText
        android:id="@+id/ed_email"
        style="@style/style_ed_shapeBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_mail"
        android:drawablePadding="@dimen/small"
        android:hint="@string/text_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ed_name"
        android:layout_marginTop="@dimen/medium"
     />
    <EditText
        android:id="@+id/ed_password"
        style="@style/style_ed_shapeBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_lock_outline_black_24dp"
        android:drawablePadding="@dimen/small"
        android:hint="@string/text_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ed_email"
        android:layout_marginTop="@dimen/medium"
       />

    <EditText
        android:id="@+id/ed_ConfirmPassword"
        style="@style/style_ed_shapeBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium"
        android:drawableStart="@drawable/ic_lock_outline_black_24dp"
        android:drawablePadding="@dimen/small"
        android:hint="@string/text_ConfirmPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ed_password" />
    <Button
        android:id="@+id/btm_login"
        style="@style/button_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_button"
        android:backgroundTint="#5663FF"
        android:text="@string/text_Register"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/Xlarge"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center">
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/QExist_account"
        style="@style/style_Text_login"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_login"
            style="@style/style_Text_login"
            android:textColor="@color/color_btn"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>