<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarDivider"
        android:padding="@dimen/xsmall"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_back"
        app:title="@string/text_filter"
        app:titleMarginStart="100dp"
        app:titleTextColor="@color/color_numPopular" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/small"
        android:background="0dp"
        android:src="@drawable/ic_close_black_24dp"
        app:layout_constraintBottom_toBottomOf="@id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/toolbar" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/average"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/text_select_category"
        android:textColor="@color/color_text_title"
        android:textSize="@dimen/text_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_select"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small"
        android:layout_marginTop="@dimen/average"
        android:layout_marginEnd="@dimen/small"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:spanCount="3"
        tools:itemCount="9"
        tools:listitem="@layout/card_select_category" />

    <TextView
        android:id="@+id/tv_titleDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/average"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/text_distance"
        android:textColor="@color/color_text_title"
        android:textSize="@dimen/text_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/list_select" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:max="200"
        android:progress="40"
        android:progressTint="@color/color_btn"
        app:layout_constraintTop_toBottomOf="@id/tv_titleDistance" />

    <TextView
        android:id="@+id/tv_titleRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/Xlarge"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/text_rating"
        android:textColor="@color/color_text_title"
        android:textSize="@dimen/text_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/seekBar" />

    <LinearLayout
        android:id="@+id/layoutRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large"
        android:background="@color/color_backgroundRating"
        android:gravity="center"
        android:padding="@dimen/small"
        android:paddingStart="@dimen/XXlarge"
        android:paddingEnd="@dimen/XXlarge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_titleRating">

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:numStars="5"
            android:progressTint="@color/color_foodybite_welcome"
            android:rating="4"
            android:saveEnabled="true"
            android:stepSize="0.5" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/shape_btn_left_radius"
            android:text="@string/text_reset"
            android:textAllCaps="false"
            style="@style/buttonHalfRadius_style"/>


        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/shape_btn_right_radius"
            android:textAllCaps="false"
            style="@style/buttonHalfRadius_style"
            android:text="@string/text_apply"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>